--- a/src/MainPage.xaml
+++ b/src/MainPage.xaml
@@ -1,7 +1,7 @@
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:hellomauitoolkit="clr-namespace:HelloMauiToolkit"
-             xmlns:converters="clr-namespace:CommunityToolkit.Maui.Converters;assembly=CommunityToolkit.Maui"
              x:Class="HelloMauiToolkit.MainPage"
              x:DataType="hellomauitoolkit:MainPage"
              BackgroundColor="{DynamicResource SecondaryColor}">
@@ -51,7 +51,7 @@
                     HorizontalTextAlignment="Start"
                     Text="{Binding Source={x:Reference ClickMeButton},
                                     Path=BackgroundColor,
-                                    Converter={converters:ColorToHexRgbStringConverter}}" />
+                                    Converter={toolkit:ColorToHexRgbStringConverter}}" />
             </HorizontalStackLayout>
 
             <Image Grid.Row="5"
